# react_agent

./: .env  .gitignore  README.md  example.ipynb  pyproject.toml
examples/: basic_agent.py
react_agent/: __init__.py
react_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
react_agent/core/: memory.py  parser.py  prompt.py  react_agent.py  verbose.py
react_agent/llms/: __init__.py  base.py  init_llms.py  openai_llm.py
react_agent/tools/: base.py  calculator.py  registry.py  web_search.py
