[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "react-agent"
version = "0.4.0"
description = "A lightweight ReAct-based AI agent framework with tool use and verbose execution"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Your Name"}
]

dependencies = [
  "pydantic>=2.0",
  "openai>=1.0",
  ""google-genai>=0.3.0"
]

[project.urls]
Homepage = "https://github.com/gautampunasiya/react-agent"
Repository = "https://github.com/gautampunasiya/react-agent"
